Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-17306

LAST ID synchronization between MDT-OST

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.16.0
    • Upstream
    • 3
    • 9223372036854775807

      During the cleanup orphan phase after MDT start, reconnection leads to unsynchronized last id between MDT and OST. This means that MDT could assign non existing objects to a client for a file create operation.

      Oct 25 15:20:31 capstorn075 kernel: LustreError: 358076:0:(ofd_dev.c:1570:ofd_create_hdl()) capstor-OST0087: dropping old orphan cleanup request
      Oct 25 15:22:20 capstorn075 kernel: Lustre: capstor-OST0087: MDS LAST_ID [0x2540000400:0xb6941:0x0] (747841) is 352 behind OST LAST_ID [0x2540000400:0xb6aa1:0x0] (748193), trust the OST
      

            aboyko Alexander Boyko
            aboyko Alexander Boyko
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: